rw-mainstack-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
  namespace: rw-control
spec:
  type: ClusterIP
  selector:
    app: main
  ports:
    - name: https
      port: 49553
      targetPort: 443
      #nodePort: 30553
    - name: http
      port: 49780
      targetPort: 80
      #nodePort: 30780
---
apiVersion: v1
kind: Service
metadata:
  name: basement-service
  namespace: rw-control
spec:
  type: ClusterIP
  selector:
    app: main
  ports:
    - name: https
      port: 40443
      targetPort: 443
      #nodePort: 30553
    - name: http
      port: 40780
      targetPort: 80
      #nodePort: 30780
    - name: tcp
      port: 13000
      targetPort: 13000
